Wed Apr 13 13:44:58 EDT 2005	JK Lowden <jklowden@schemamania.org>
	* src/dblib/unittests/t0002.c 
	- changed to test multiple resultsets. 
	- test works: buffering is broken.  

Wed Apr 13 13:44:58 EDT 2005	JK Lowden <jklowden@schemamania.org>
	* src/dblib/unittests/t0002.c cleanup, no functional change

Wed Apr 13 18:57:21 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/token.c:
	- added tds_process_tokens function
	- use new function to code old one
	* src/odbc/unittests/moreandcount.c: more verbose

Tue Apr 12 09:17:06 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c:
	- proper cursor state check
	- fix print and compute tests
	* src/odbc/unittests/common.c: error to error stream
	* src/odbc/unittests/prepare_results.c: reuse and update
	* src/odbc/unittests/print.c: update

Mon Apr 11 15:50:35 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* NEWS TODO: update

Mon Apr 11 13:05:39 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsodbc.h src/odbc/odbc.c:
	- do not return data if not present
	* src/odbc/unittests/print.c: updated

Mon Apr 11 11:34:54 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* freetds.spec.in:
	- cleanup
	- put *.so file in -devel package
	* src/odbc/unittests/moreandcount.c:
	- add some comments
	* src/odbc/unittests/raiserror.c:
	- update to catch some problems

Fri Apr  8 16:56:06 EDT 2005	JK Lowden <jklowden@schemamania.org>
	* src/odbc/unittests/raiserror.c slight reformatting
	* samples/odbc_rpc.pl added error handler

Fri Apr  8 15:46:13 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/bcp.c:
	- comments style update
	- fix small buffer underflow reading format file
	- better handle of memory errors
	- added some TODO/FIXME comments

Wed Apr  6 11:50:40 EDT 2005	JK Lowden <jklowden@schemamania.org>
	* samples/odbc_rpc.pl works

Wed Apr  6 02:38:19 EDT 2005	JK Lowden <jklowden@schemamania.org>